# sync-pre-commit-deps

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg  sync_pre_commit_deps.py  tox.ini
.github/: mergify.yml  renovate.json
.github/workflows/: main.yml
tests/: sync_pre_commit_deps_test.py
