[metadata]
name = sync_pre_commit_deps
version = 0.0.3
description = Sync pre-commit hook dependencies based on other installed hooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pre-commit/sync-pre-commit-deps
author = Max R
author_email = maxr@outlook.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = sync_pre_commit_deps
install_requires =
    ruamel.yaml>=0.17
python_requires = >=3.9

[options.entry_points]
console_scripts =
    sync-pre-commit-deps=sync_pre_commit_deps:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
